--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="vb.refugeehelpvb" >
+    package="vb.refugeehelpvb"
+    android:versionCode="1"
+    android:versionName="0.1a" >
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
+    <!--
+ The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but are recommended.
+    -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -9,14 +26,75 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DoctorsActivity"></activity>
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppSettings" >
+        </activity>
+        <activity
+            android:name=".doctors.DoctorsActivity"
+            android:label="@string/title_activity_doctors"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppDoctors" >
+        </activity>
+        <activity
+            android:name=".doctors.DoctorsDetails"
+            android:label="@string/title_activity_doctors"
+            android:parentActivityName=".doctors.DoctorsActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppDoctors" >
+        </activity>
+        <activity
+            android:name=".places.PlacesActivity"
+            android:label="@string/title_activity_places"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppPlaces" >
+        </activity>
+        <activity
+            android:name=".places.PlacesCategoryActivity"
+            android:parentActivityName=".places.PlacesActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppPlaces"
+            android:label="@string/title_activity_places_category" >
+        </activity>
+        <activity
+            android:name=".publictransport.PublicTransportActivity"
+            android:label="@string/title_activity_public_transport"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppPublicTransport" >
+        </activity>
+        <activity
+            android:name=".calendar.CalendarActivity"
+            android:label="@string/title_activity_calendar"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppCalendar" >
+        </activity>
+        <activity
+            android:name=".emergency.EmergencyActivity"
+            android:label="@string/title_activity_emergency"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppEmergency" >
+        </activity>
     </application>
 
 </manifest>
