--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'com.google.android.gms:play-services:7.5.0'
     compile 'org.osmdroid:osmdroid-android:5.0.1@aar'
+    compile 'com.android.support:design:22.2.0'
 }
