--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.0"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.0"
 
     defaultConfig {
         applicationId "vb.helloRabenau"
@@ -21,10 +21,11 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.android.support:cardview-v7:22.2.0'
-    compile 'com.android.support:recyclerview-v7:22.2.0'
+    compile 'com.squareup.okhttp:okhttp:2.4.0'
+    compile 'com.android.support:appcompat-v7:23.0.0'
+    compile 'com.android.support:cardview-v7:23.0.0'
+    compile 'com.android.support:recyclerview-v7:23.0.0'
     compile 'com.google.android.gms:play-services:7.5.0'
-    compile 'org.osmdroid:osmdroid-android:5.0.1@aar'
-    compile 'com.android.support:design:22.2.0'
+    compile 'com.android.support:design:23.0.0'
+    compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.1@aar'){transitive=true}
 }
