--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+
+        <service android:name="com.mapbox.mapboxsdk.telemetry.TelemetryService" />
+        
         <activity
             android:name=".StartupActivity"
             android:label="@string/app_name">
